# rust_golden_sample

./: Cargo.toml
pf_age_macro_rule/: Cargo.toml
pf_age_macro_rule/src/: lib.rs
rust_pg_macro/: Cargo.toml
rust_pg_macro/src/: attributes.rs  lib.rs
src/: main.rs
